--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<ul class="navbar-nav nav ml-auto">
 					<li class="nav-item"><a href="#home-section" class="nav-link"><span>Accueil</span></a></li>
 					<li class="nav-item"><a href="#about-section" class="nav-link"><span>À propos</span></a></li>
-					<li class="nav-item"><a href="#skills-section" class="nav-link"><span>Compétances</span></a></li>
+					<li class="nav-item"><a href="#skills-section" class="nav-link"><span>Compétences</span></a></li>
 					<li class="nav-item"><a href="#services-section" class="nav-link"><span>Expériences</span></a></li>
 					<!-- <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projets</span></a></li> -->
 					<li class="nav-item"><a href="#blog-section" class="nav-link"><span>Œuvres</span></a></li>
@@ -481,7 +481,7 @@
 			<div class="row justify-content-center">
 				<div class="col-md-12 heading-section heading-section-gray text-center ftco-animate mb-5">
 					<span class="subheading">Mes Expériences</span>
-					<h2 class="mb-4">La combinaison de mes Compétances conduit à des œuvres impressionnantes </h2>
+					<h2 class="mb-4">La combinaison de mes Compétences conduit à des œuvres impressionnantes </h2>
 					<!-- <p>Chez nous, le client est prioritaire</p> -->
 				</div>
 			</div>
@@ -509,7 +509,7 @@
 						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-advertising"></span></div>
 						<div class="media-body">
 							<h3 class="heading mb-3">Conception de Portfolio</h3>
-							<p>La documentation des compétances peut bien favoriser les opportunités d'emplois.</p>
+							<p>La documentation des compétences peut bien favoriser les opportunités d'emplois.</p>
 						</div>
 					</div> 
 				</div>
