--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<div class="overlay"></div>
 				<div class="container-fluid px-md-0">
 					<div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-						<div class="one-third order-md-last img" style="background-image:url(images/bg-111.jpg);">
+						<div class="one-third order-md-last img" style="background-image:url(images/bg01canva.png);">
 							<div class="overlay"></div>
 							<div class="overlay-1"></div>
 						</div>
@@ -66,7 +66,7 @@
 				<div class="overlay"></div>
 				<div class="container-fluid px-md-0">
 					<div class="row d-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-						<div class="one-third order-md-last img" style="background-image:url(images/bg-11.jpg);">
+						<div class="one-third order-md-last img" style="background-image:url(images/bg11.png);">
 							<div class="overlay"></div>
 							<div class="overlay-1"></div>
 						</div>
